--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "stripe": "^12.9.0",
+    "uuid": "^9.0.0"
   }
 }
