--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "homepage": "https://github.com/njoroge-s/restuarant-ecommerce#readme",
   "dependencies": {
+    "esm": "^3.2.25",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
-    "nodemon": "^2.0.22",
     "react-redux": "^8.1.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
@@ -28,5 +28,10 @@
     "router": "^1.3.8",
     "stripe": "^12.9.0",
     "uuid": "^9.0.0"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  
+    "type": "module"
 }
