--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
-    "cjs-loader": "^0.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.1.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
@@ -45,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.88.204:3000/"
+  "proxy": "http://localhost:5000/"
 }
